--- a/files/en-us/learn/accessibility/wai-aria_basics/test_your_skills_colon__wai-aria/index.html
+++ b/files/en-us/learn/accessibility/wai-aria_basics/test_your_skills_colon__wai-aria/index.html
@@ -27,7 +27,7 @@ If you get stuck, then ask us for help — see the {{anch("Assessment or further
 
 <p>{{EmbedGHLiveSample("learning-area/accessibility/tasks/html-css/aria/aria1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/accessibility/tasks/html-css/aria/aria1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -44,7 +44,7 @@ If you get stuck, then ask us for help — see the {{anch("Assessment or further
 
 <p>{{EmbedGHLiveSample("learning-area/accessibility/tasks/html-css/aria/aria2.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/accessibility/tasks/html-css/aria/aria2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -54,7 +54,7 @@ If you get stuck, then ask us for help — see the {{anch("Assessment or further
 
 <p>The problem we have now is that when the DOM changes to show a new description, screenreaders cannot see what has changed. Can you update it so that description changes are announced by the screenreader?</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/accessibility/tasks/js/aria/aria-js1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
