--- a/files/en-us/learn/css/building_blocks/cascade_tasks/index.html
+++ b/files/en-us/learn/css/building_blocks/cascade_tasks/index.html
@@ -25,7 +25,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/cascade/cascade.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/cascade/cascade-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
