--- a/files/en-us/learn/css/building_blocks/overflow_tasks/index.html
+++ b/files/en-us/learn/css/building_blocks/overflow_tasks/index.html
@@ -25,7 +25,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/overflow/overflow-scroll.html", '100%', 800)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/overflow/overflow-scroll-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -39,7 +39,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/overflow/overflow-hidden.html", '100%', 1100)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/overflow/overflow-hidden-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
