--- a/files/en-us/learn/css/building_blocks/tables_tasks/index.html
+++ b/files/en-us/learn/css/building_blocks/tables_tasks/index.html
@@ -33,7 +33,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/tables/table.html", '100%', 1000)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/tables/table-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
