--- a/files/en-us/learn/css/building_blocks/test_your_skills_backgrounds_and_borders/index.html
+++ b/files/en-us/learn/css/building_blocks/test_your_skills_backgrounds_and_borders/index.html
@@ -35,7 +35,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/backgrounds/backgrounds1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/backgrounds/backgrounds1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -57,7 +57,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/backgrounds/backgrounds2.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/backgrounds/backgrounds2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
