--- a/files/en-us/learn/css/css_layout/floats_skills/index.html
+++ b/files/en-us/learn/css/css_layout/floats_skills/index.html
@@ -29,7 +29,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/float/float1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/float/float1-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -43,7 +43,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/float/float2.html", '100%', 800)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/float/float2-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -57,7 +57,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/float/float3.html", '100%', 800)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/float/float3-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
