--- a/files/en-us/learn/css/css_layout/grid_skills/index.html
+++ b/files/en-us/learn/css/css_layout/grid_skills/index.html
@@ -27,7 +27,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/grid/grid1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/grid/grid1-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -47,7 +47,7 @@ tags:
  <li>Can you now cause the first item to display on top without changing the order of items in the source?</li>
 </ul>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/grid/grid2-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -61,7 +61,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/grid/grid3.html", '100%', 800)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/grid/grid3-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -75,7 +75,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/grid/grid4.html", '100%', 1200)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/grid/grid4-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
