--- a/files/en-us/learn/css/css_layout/position_skills/index.html
+++ b/files/en-us/learn/css/css_layout/position_skills/index.html
@@ -28,7 +28,7 @@ tags:
 
 <p>As an extra challenge, can you change the target to display underneath the text?</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/position/position1-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -42,7 +42,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("css-examples/learn/tasks/position/position2.html", '100%', 1000)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p>For assessment or further work purposes, <a href="https://github.com/mdn/css-examples/blob/master/learn/tasks/position/position2-download.html">download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
