--- a/files/en-us/learn/forms/test_your_skills_colon__advanced_styling/index.html
+++ b/files/en-us/learn/forms/test_your_skills_colon__advanced_styling/index.html
@@ -39,7 +39,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/advanced-styling/advanced-styling1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/advanced-styling/advanced-styling1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -60,7 +60,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/advanced-styling/advanced-styling2.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/advanced-styling/advanced-styling2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -75,7 +75,7 @@ tags:
  <li>Second, we want you to provide a useful visual indicator of whether the data entered inside each input is valid or not.</li>
 </ol>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/advanced-styling/advanced-styling3-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
