--- a/files/en-us/learn/forms/test_your_skills_colon__basic_controls/index.html
+++ b/files/en-us/learn/forms/test_your_skills_colon__basic_controls/index.html
@@ -33,7 +33,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/basic-controls/basic-controls1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/basic-controls/basic-controls1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -52,7 +52,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/basic-controls/basic-controls2.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/basic-controls/basic-controls2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -70,7 +70,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/basic-controls/basic-controls3.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/basic-controls/basic-controls3-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
