--- a/files/en-us/learn/forms/test_your_skills_colon__styling_basics/index.html
+++ b/files/en-us/learn/forms/test_your_skills_colon__styling_basics/index.html
@@ -30,7 +30,7 @@ tags:
  <li>Use some kind of layout technique to make the inputs and labels line up neatly.</li>
 </ol>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/styling-basics/styling-basics1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
