--- a/files/en-us/learn/html/introduction_to_html/test_your_skills_colon__advanced_html_text/index.html
+++ b/files/en-us/learn/html/introduction_to_html/test_your_skills_colon__advanced_html_text/index.html
@@ -26,7 +26,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/introduction-to-html/tasks/advanced-text/advanced-text1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/introduction-to-html/tasks/advanced-text/advanced-text1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -45,7 +45,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/introduction-to-html/tasks/advanced-text/advanced-text2.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/introduction-to-html/tasks/advanced-text/advanced-text2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
