--- a/files/en-us/learn/javascript/building_blocks/test_your_skills_colon__loops/index.html
+++ b/files/en-us/learn/javascript/building_blocks/test_your_skills_colon__loops/index.html
@@ -27,7 +27,7 @@ tags:
 
 <p>In our first looping task we want you start by creating a simple loop that goes through all the items in the provided <code>myArray</code> and prints them out on the screen inside list items (i.e., <code><a href="/en-US/docs/Web/HTML/Element/li">&lt;li&gt;</a></code> elements), which are appended to the provided <code>list</code>.</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/tree/master/javascript/building-blocks/tasks/loops/loops1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -47,7 +47,7 @@ tags:
 
 <p>You should use a type of loop that you've not used in the previous task.</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/tree/master/javascript/building-blocks/tasks/loops/loops2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -65,7 +65,7 @@ tags:
 
 <p>You should use a type of loop that you've not used in the previous two tasks.</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/tree/master/javascript/building-blocks/tasks/loops/loops3-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
