--- a/files/en-us/learn/accessibility/test_your_skills_colon__html_accessibility/index.html
+++ b/files/en-us/learn/accessibility/test_your_skills_colon__html_accessibility/index.html
@@ -28,7 +28,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/accessibility/tasks/html-css/html/html-a11y1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/accessibility/tasks/html-css/html/html-a11y1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -46,7 +46,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/accessibility/tasks/html-css/html/html-a11y2.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/accessibility/tasks/html-css/html/html-a11y2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -64,7 +64,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/accessibility/tasks/html-css/html/html-a11y3.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/accessibility/tasks/html-css/html/html-a11y3-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -81,7 +81,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/accessibility/tasks/html-css/html/html-a11y4.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/accessibility/tasks/html-css/html/html-a11y4-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
