--- a/files/en-us/learn/forms/test_your_skills_colon__form_structure/index.html
+++ b/files/en-us/learn/forms/test_your_skills_colon__form_structure/index.html
@@ -30,7 +30,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/form-structure/form-structure1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/form-structure/form-structure1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
