--- a/files/en-us/learn/forms/test_your_skills_colon__form_validation/index.html
+++ b/files/en-us/learn/forms/test_your_skills_colon__form_validation/index.html
@@ -31,7 +31,7 @@ tags:
 
 <p>Try submitting your form — it should refuse to submit until the above constraints are followed, and give suitable error messages. To help, you might want to consider adding some simple CSS to show when a form field is valid or invalid.</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/form-validation/form-validation1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -51,7 +51,7 @@ tags:
 
 <p>Again, to help you might want to consider adding some simple CSS to show when a form field is valid or invalid.</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/form-validation/form-validation2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -64,7 +64,7 @@ tags:
  <li>Add an event listener that checks whether the inputted value is an email address, and whether it is long enough. If it doesn't look like an email address or is too short, provide the user with appropriate custom error messages.</li>
 </ol>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/form-validation/form-validation3-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
