--- a/files/en-us/learn/forms/test_your_skills_colon__html5_controls/index.html
+++ b/files/en-us/learn/forms/test_your_skills_colon__html5_controls/index.html
@@ -34,7 +34,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/html5-controls/html5-controls1.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/html5-controls/html5-controls1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -52,7 +52,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/html/forms/tasks/html5-controls/html5-controls2.html", '100%', 700)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/html/forms/tasks/html5-controls/html5-controls2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
