--- a/files/en-us/learn/javascript/first_steps/test_your_skills_colon__variables/index.html
+++ b/files/en-us/learn/javascript/first_steps/test_your_skills_colon__variables/index.html
@@ -36,7 +36,7 @@ If you get stuck, then ask us for help — see the {{anch("Assessment or further
 
 <p>{{EmbedGHLiveSample("learning-area/javascript/introduction-to-js-1/tasks/variables/variables1.html", '100%', 400)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/javascript/introduction-to-js-1/tasks/variables/variables1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -48,7 +48,7 @@ If you get stuck, then ask us for help — see the {{anch("Assessment or further
 
 <p>{{EmbedGHLiveSample("learning-area/javascript/introduction-to-js-1/tasks/variables/variables2.html", '100%', 400)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/javascript/introduction-to-js-1/tasks/variables/variables2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -60,7 +60,7 @@ If you get stuck, then ask us for help — see the {{anch("Assessment or further
 
 <p>{{EmbedGHLiveSample("learning-area/javascript/introduction-to-js-1/tasks/variables/variables3.html", '100%', 400)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/blob/master/javascript/introduction-to-js-1/tasks/variables/variables3-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
