--- a/files/en-us/learn/javascript/objects/test_your_skills_colon__object-oriented_javascript/index.html
+++ b/files/en-us/learn/javascript/objects/test_your_skills_colon__object-oriented_javascript/index.html
@@ -39,7 +39,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/javascript/oojs/tasks/oojs/oojs1.html", '100%', 400)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/tree/master/javascript/oojs/tasks/oojs/oojs1-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -53,7 +53,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/javascript/oojs/tasks/oojs/oojs2.html", '100%', 400)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/tree/master/javascript/oojs/tasks/oojs/oojs2-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
@@ -69,7 +69,7 @@ tags:
 
 <p>{{EmbedGHLiveSample("learning-area/javascript/oojs/tasks/oojs/oojs3.html", '100%', 400)}}</p>
 
-<div class="notecard note">
+<div class="callout">
 <p><a href="https://github.com/mdn/learning-area/tree/master/javascript/oojs/tasks/oojs/oojs3-download.html">Download the starting point for this task</a> to work in your own editor or in an online editor.</p>
 </div>
 
